添加邮箱验证码

--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,6 @@ HOST=127.0.0.1
 PORT=3001
 NODE_ENV=development
 
-
 APP_KEY=mes_qdhd_mobile_xhykjyxgs
 
 DB_CONNECTION=mysql
@@ -11,3 +10,12 @@ DB_PORT=
 DB_USER=
 DB_PASSWORD=
 DB_DATABASE=
+
+SMTP_HOST=smtp.qq.com
+SMTP_PORT=465
+
+SMTP_EMAIL=2030222597@qq.com
+SMTP_PASSWORD=fxypoejvzizwbebc
+
+FROM_NAME=LM
+FROM_EMAIL=2030222597@qq.com
