--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,14 @@
     "express-art-template": "^1.0.1",
     "express-jwt": "^5.3.1",
     "express-session": "^1.17.0",
+    "helmet": "^4.4.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "mysql": "^2.18.1"
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
+    "xss-clean": "^0.1.1"
   }
 }
