--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
     "xss-clean": "^0.1.1"
